# Qt-Notes

./: .gitignore  CMakeLists.txt  Main.qml  images.qrc  main.cpp
backend/: Note.h  cmutil.cpp  cmutil.h  format.cpp  format.h  notesbackend.cpp  notesbackend.h  notetable.cpp  notetable.h
js/: Constants.js  MdArray.js  TextBlock.js
qml/: ListNoteModel.qml  Main.qml  Main2.qml  MarkdownTextArea.qml  NoteItem.qml  NotesList.qml  NotesTabBar.qml
qml/model/: ListNoteModel.qml
tests/: tst_blocks_from_text.qml  tst_breaks.qml  tst_brick_index_on_which_cursor_is_located.qml  tst_count_italics_asterisks_before_cursor.qml  tst_cursor_block_index.qml  tst_cursor_displacement_inside_block.qml  tst_cursor_displacement_inside_markdown_block.qml  tst_cursor_just_after_paragraph_breakline.qml  tst_find_last_html_break_end_index.qml  tst_first_char_of_title.qml  tst_first_paragraph_breakline_index.qml  tst_get_markdown_text_on_block_before_cursor.qml  tst_length_before_cursor_block.qml  tst_length_until_cursor.qml  tst_paragraph_length.qml  tst_title_length.qml  tst_title_with_newline_length.qml  tst_total_length.qml  tst_update_italics.qml
